[package]
name = "pq-xwing-sig"
version = "0.1.0"
edition = "2021"
description = "Draft-compliant composite ML-DSA signatures (LAMPS WG)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Slurp9187/pq-xwing-sig"
keywords = ["post-quantum", "composite", "ml-dsa", "ed448", "cryptography"]
categories = ["cryptography", "no-std"]

[dependencies]
libcrux-ml-dsa = { git = "https://github.com/cryspen/libcrux", package = "libcrux-ml-dsa", branch = "main" }
ed448-goldilocks-plus = { version = "0.16", features = ["signing"] }
sha3 = "0.10"
sha2 = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
rand_core = "0.6"
thiserror = "2.0"
signature = "2.0"
subtle = "2.6"
ed25519-dalek = { version = "2.2", features = [
  "rand_core",
  "zeroize",
] } # For Ed25519 + zeroize compat


[dev-dependencies]
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
base64 = "0.22"
x509-parser = "0.15"
sha2 = "0.10"
